syntax = "proto3";
package routerprotocol.routerchain.crosstalk;

option go_package = "github.com/router-protocol/sdk-go/routerchain/crosstalk/types";
import "multichain/chain_type.proto"; 

message CrosstalkAckRequestConfirm {  
  routerprotocol.routerchain.multichain.ChainType chainType = 1; 
  string chainId = 2; 
  uint64 eventNonce = 3; 
  bytes claimHash = 4; 
  string ethSigner = 5; 
  string signature = 6; 
  string orchestrator = 7;
}

